RESOLVED FIXED278516
REGRESSION(282012@main): [GTK] WebKitWebProcess ASSERT in WebCore::PlatformDisplay::sharedDisplay
https://bugs.webkit.org/show_bug.cgi?id=278516
Summary REGRESSION(282012@main): [GTK] WebKitWebProcess ASSERT in WebCore::PlatformDi...
Yanko Kaneti
Reported 2024-08-22 00:26:14 PDT
This with webkitgtk 2.45.90 as found in Rawhide and used by Evolution. Core was generated by `/usr/libexec/webkit2gtk-4.1/WebKitWebProcess 879 132 306'. Program terminated with signal SIGABRT, Aborted. #0 __pthread_kill_implementation (threadid=<optimized out>, signo=signo@entry=6, no_tid=no_tid@entry=0) at pthread_kill.c:44 44 return INTERNAL_SYSCALL_ERROR_P (ret) ? INTERNAL_SYSCALL_ERRNO (ret) : 0; [Current thread is 1 (Thread 0x7f44c0d57e80 (LWP 2))] (gdb) bt #0 __pthread_kill_implementation (threadid=<optimized out>, signo=signo@entry=6, no_tid=no_tid@entry=0) at pthread_kill.c:44 #1 0x00007f44cc680793 in __pthread_kill_internal (threadid=<optimized out>, signo=6) at pthread_kill.c:78 #2 0x00007f44cc627d0e in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26 #3 0x00007f44cc60f942 in __GI_abort () at abort.c:79 #4 0x00007f44cc82cb5f in WTFCrashWithInfo () at WTF/Headers/wtf/Assertions.h:864 #5 0x00007f44ced97b63 in WebCore::PlatformDisplay::sharedDisplay () at /usr/src/debug/webkitgtk-2.45.90-1.fc42.x86_64/Source/WebCore/platform/graphics/PlatformDisplay.cpp:68 #6 WebCore::deinitializeGStreamer () at /usr/src/debug/webkitgtk-2.45.90-1.fc42.x86_64/Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.cpp:555 #7 0x00007f44cd09d7a2 in WebKit::AuxiliaryProcessMainBase<WebKit::WebProcess, true>::run (this=0x7ffec7a0f770, argc=4, argv=<optimized out>) at /usr/src/debug/webkitgtk-2.45.90-1.fc42.x86_64/Source/WebKit/Shared/AuxiliaryProcessMain.h:73 #8 WebKit::AuxiliaryProcessMain<WebKit::WebProcessMainGtk> (argc=4, argv=<optimized out>) at /usr/src/debug/webkitgtk-2.45.90-1.fc42.x86_64/Source/WebKit/Shared/AuxiliaryProcessMain.h:98 #9 WebKit::WebProcessMain (argc=4, argv=<optimized out>) at /usr/src/debug/webkitgtk-2.45.90-1.fc42.x86_64/Source/WebKit/WebProcess/gtk/WebProcessMainGtk.cpp:106 #10 0x00007f44cc611248 in __libc_start_call_main (main=main@entry=0x55e5c4d56160 <main(int, char**)>, argc=argc@entry=4, argv=argv@entry=0x7ffec7a0f908) at ../sysdeps/nptl/libc_start_call_main.h:58 #11 0x00007f44cc61130b in __libc_start_main_impl (main=0x55e5c4d56160 <main(int, char**)>, argc=4, argv=0x7ffec7a0f908, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffec7a0f8f8) at ../csu/libc-start.c:360 #12 0x000055e5c4d56095 in _start () (gdb) frame 5 #5 0x00007f44ced97b63 in WebCore::PlatformDisplay::sharedDisplay () at /usr/src/debug/webkitgtk-2.45.90-1.fc42.x86_64/Source/WebCore/platform/graphics/PlatformDisplay.cpp:68 68 RELEASE_ASSERT(s_sharedDisplay); (gdb)
Attachments
Carlos Garcia Campos
Comment 1 2024-08-22 02:21:20 PDT
EWS
Comment 2 2024-08-22 04:12:44 PDT
Committed 282613@main (f4ec1a336d24): <https://commits.webkit.org/282613@main> Reviewed commits have been landed. Closing PR #32581 and removing active labels.
Yanko Kaneti
Comment 3 2024-08-22 09:02:04 PDT
No crashes or other oddities with this and the other assert patch applied. Thanks
Note You need to log in before you can comment on or make changes to this bug.