Cherry-pick 282613@main (f4ec1a336d24). https://bugs.webkit.org/show_bug.cgi?id=278516

REGRESSION(282012@main): [GTK] WebKitWebProcess ASSERT in WebCore::PlatformDisplay::sharedDisplay
    https://bugs.webkit.org/show_bug.cgi?id=278516

    Reviewed by Miguel Gomez.

    Since 282012@main the PlatformDisplay is not created unconditionally,
    for example when env var WEBKIT_DISABLE_DMABUF_RENDERER is set we don't
    create it. This patch adds PlatformDisplay::sharedDisplayIfExists() that
    is used in deinitializeGStreamer() to clear the platform display only
    whe it was created.

    * Source/WebCore/platform/graphics/PlatformDisplay.cpp:
    (WebCore::PlatformDisplay::sharedDisplayIfExists):
    * Source/WebCore/platform/graphics/PlatformDisplay.h:
    * Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.cpp:
    (WebCore::deinitializeGStreamer):

    Canonical link: https://commits.webkit.org/282613@main